fixed layout issues & finished building the feed header

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,3 +1,7 @@
 .app {
   display: flex;
+  height: 100vh;
+  max-width: 1300px;
+  margin-left: auto;
+  margin-right: auto;
 }
