--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -1,6 +1,6 @@
 .sidebar {
   border-right: 1px solid var(--twitter-background);
-  flex: 0.3;
+  flex: 0.25;
   min-width: 200px;
   margin-top: 20px;
   padding-left: 20px;
@@ -14,7 +14,6 @@
 }
 
 .sidebar__tweet {
-  align-self: center;
   background-color: var(--twitter-color) !important;
   border: none !important;
   color: #fff !important;
@@ -24,4 +23,5 @@
   border-radius: 30px !important;
   height: 50px !important;
   margin-top: 20px !important;
+  font-size: 16px !important;
 }
